[gd_scene load_steps=5 format=2]

[ext_resource path="res://UserInterface/EventHud/EventHud.gd" type="Script" id=1]
[ext_resource path="res://UserInterface/fonts/poppins_ui_text.tres" type="DynamicFont" id=2]
[ext_resource path="res://UserInterface/fonts/poppins_description_text.tres" type="DynamicFont" id=3]
[ext_resource path="res://UserInterface/EventHud/prefabs/EnemyInfoBox.tscn" type="PackedScene" id=5]

[node name="EventHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
rect_pivot_offset = Vector2( -661, -281 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 724.0
mouse_filter = 2

[node name="MainView" type="Control" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 660.0
rect_min_size = Vector2( 0, 660 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox - Main" type="HBoxContainer" parent="VBoxContainer/MainView"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 660 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MBox-MainBox" type="MarginContainer" parent="VBoxContainer/MainView/HBox - Main"]
margin_right = 1008.0
margin_bottom = 660.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24

[node name="MBox-QueueList" type="MarginContainer" parent="VBoxContainer/MainView/HBox - Main"]
margin_left = 1012.0
margin_right = 1280.0
margin_bottom = 660.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainView/HBox - Main/MBox-QueueList"]
margin_left = 24.0
margin_top = 24.0
margin_right = 260.0
margin_bottom = 636.0
rect_min_size = Vector2( 236, 612 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnemyList" type="VBoxContainer" parent="VBoxContainer/MainView/HBox - Main/MBox-QueueList/ScrollContainer"]
unique_name_in_owner = true
margin_right = 236.0
margin_bottom = 80.0
rect_min_size = Vector2( 236, 0 )
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 24

[node name="EnemyInfo" parent="VBoxContainer/MainView/HBox - Main/MBox-QueueList/ScrollContainer/EnemyList" instance=ExtResource( 5 )]

[node name="BottomBar" type="Control" parent="VBoxContainer"]
margin_top = 664.0
margin_right = 1280.0
margin_bottom = 724.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BottomBar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="HBox - Bottom Bar" type="HBoxContainer" parent="VBoxContainer/BottomBar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 12

[node name="MBox - ObjectiveInfo" type="MarginContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar"]
margin_right = 320.0
margin_bottom = 60.0
rect_min_size = Vector2( 320, 0 )
mouse_filter = 2
custom_constants/margin_right = 24
custom_constants/margin_top = 16
custom_constants/margin_left = 24
custom_constants/margin_bottom = 16

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo"]
margin_left = 24.0
margin_top = 16.0
margin_right = 296.0
margin_bottom = 44.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo"]
margin_left = 24.0
margin_top = 16.0
margin_right = 296.0
margin_bottom = 44.0
mouse_filter = 2
size_flags_horizontal = 0
custom_constants/separation = 16

[node name="BanishGroup" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/HBoxContainer"]
unique_name_in_owner = true
margin_right = 86.0
margin_bottom = 28.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="BanishValue" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/HBoxContainer/BanishGroup"]
unique_name_in_owner = true
margin_right = 36.0
margin_bottom = 28.0
rect_min_size = Vector2( 36, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "0/0"
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/HBoxContainer/BanishGroup"]
margin_left = 40.0
margin_right = 86.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " Banish"
align = 1
valign = 1
uppercase = true

[node name="RelicGroup" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/HBoxContainer"]
unique_name_in_owner = true
margin_left = 102.0
margin_right = 185.0
margin_bottom = 28.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="RelicValue" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/HBoxContainer/RelicGroup"]
unique_name_in_owner = true
margin_right = 36.0
margin_bottom = 28.0
rect_min_size = Vector2( 36, 28 )
size_flags_horizontal = 11
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "0/0"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/HBoxContainer/RelicGroup"]
margin_left = 40.0
margin_right = 83.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " Relics"
align = 1
valign = 1
uppercase = true

[node name="LoreGroup" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/HBoxContainer"]
unique_name_in_owner = true
margin_left = 201.0
margin_right = 272.0
margin_bottom = 28.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LoreValue" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/HBoxContainer/LoreGroup"]
unique_name_in_owner = true
margin_right = 36.0
margin_bottom = 28.0
rect_min_size = Vector2( 36, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "0/0"
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/HBoxContainer/LoreGroup"]
margin_left = 40.0
margin_right = 71.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " Lore"
align = 1
valign = 1
uppercase = true

[node name="MBox - ThreatMeter" type="MarginContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar"]
margin_left = 324.0
margin_right = 956.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 24
custom_constants/margin_top = 16
custom_constants/margin_left = 24
custom_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter"]
margin_left = 24.0
margin_top = 16.0
margin_right = 608.0
margin_bottom = 44.0
mouse_filter = 2

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer"]
margin_right = 224.0
margin_bottom = 28.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 2

[node name="ColorRect1" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer1"]
margin_left = 48.0
margin_top = 6.0
margin_right = 64.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer1"]
margin_left = 80.0
margin_top = 6.0
margin_right = 96.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer1"]
margin_left = 112.0
margin_top = 6.0
margin_right = 128.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect4" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer1"]
margin_left = 144.0
margin_top = 6.0
margin_right = 160.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect5" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer1"]
margin_left = 176.0
margin_top = 6.0
margin_right = 192.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect6" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer1"]
margin_left = 208.0
margin_top = 6.0
margin_right = 224.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ActionBox" type="CenterContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 196.0
margin_right = 388.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeaveButton" type="Button" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/ActionBox"]
unique_name_in_owner = true
margin_left = 62.0
margin_top = 1.0
margin_right = 129.0
margin_bottom = 27.0
focus_mode = 1
size_flags_vertical = 11
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 1
text = "Leave"
flat = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/ActionBox/LeaveButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.25098 )

[node name="EscapeButton" type="Button" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/ActionBox"]
unique_name_in_owner = true
margin_left = 62.0
margin_top = 1.0
margin_right = 129.0
margin_bottom = 27.0
focus_mode = 1
size_flags_vertical = 11
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 1
text = "Escape"
flat = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/ActionBox/EscapeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.25098 )

[node name="ThreatBox" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer"]
unique_name_in_owner = true
margin_left = 228.0
margin_right = 356.0
margin_bottom = 28.0
rect_min_size = Vector2( 128, 16 )
mouse_filter = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Threat"
align = 1
valign = 1
uppercase = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer"]
margin_left = 360.0
margin_right = 584.0
margin_bottom = 28.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="ColorRect1" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer2"]
margin_top = 6.0
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer2"]
margin_left = 32.0
margin_top = 6.0
margin_right = 48.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_top = 6.0
margin_right = 80.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect4" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer2"]
margin_left = 96.0
margin_top = 6.0
margin_right = 112.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect5" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer2"]
margin_left = 128.0
margin_top = 6.0
margin_right = 144.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect6" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer2"]
margin_left = 160.0
margin_top = 6.0
margin_right = 176.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="MBox - GlobalStats" type="MarginContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar"]
margin_left = 960.0
margin_right = 1280.0
margin_bottom = 60.0
rect_min_size = Vector2( 320, 0 )
mouse_filter = 2
custom_constants/margin_right = 24
custom_constants/margin_top = 16
custom_constants/margin_left = 24
custom_constants/margin_bottom = 16

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats"]
margin_left = 24.0
margin_top = 16.0
margin_right = 296.0
margin_bottom = 44.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats"]
margin_left = 24.0
margin_top = 16.0
margin_right = 296.0
margin_bottom = 44.0
mouse_filter = 2
custom_constants/separation = 24

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/HBoxContainer"]
margin_right = 124.0
margin_bottom = 28.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/HBoxContainer/HBoxContainer2"]
margin_right = 60.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Weapon "
align = 1
valign = 1
uppercase = true

[node name="EventCoordsLabel" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/HBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = " 8/10 "
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/HBoxContainer"]
margin_left = 148.0
margin_right = 272.0
margin_bottom = 28.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/HBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = " Money"
align = 1
valign = 1
uppercase = true

[node name="EventCoordsLabel2" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/HBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 11
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = " $242"
align = 1
valign = 1
